[gd_scene load_steps=8 format=3 uid="uid://c6somssmg7ndo"]

[ext_resource type="Script" path="res://scripts/debug_enemy.gd" id="1_dv3t7"]
[ext_resource type="SpriteFrames" uid="uid://bqcvp0swgh6hi" path="res://spriteframes/robot.tres" id="3_ftmlg"]
[ext_resource type="Texture2D" uid="uid://cohhwodi27sso" path="res://sprites/gun.png" id="4_0faog"]
[ext_resource type="AudioStream" uid="uid://dqvmp51rveuuu" path="res://sfx/shoot.wav" id="4_ng55x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qf1e"]
size = Vector2(80, 106)

[sub_resource type="Curve" id="Curve_pblsb"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0188679), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_1ovfl"]
colors = PackedColorArray(0.116127, 0.116127, 0.116127, 1, 0, 0, 0, 1)

[node name="robo_enemy" type="Node2D"]
script = ExtResource("1_dv3t7")

[node name="enemy_body" type="CharacterBody2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_body"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_6qf1e")

[node name="sprite" type="AnimatedSprite2D" parent="enemy_body"]
texture_filter = 1
scale = Vector2(0.415, 0.415)
sprite_frames = ExtResource("3_ftmlg")
animation = &"idle"
autoplay = "idle"

[node name="Sprite2D" type="Sprite2D" parent="enemy_body/sprite"]
texture_filter = 1
position = Vector2(31.3253, 62.6506)
scale = Vector2(19.685, 19.685)
texture = ExtResource("4_0faog")
offset = Vector2(1.955, 0)

[node name="Marker2D" type="Marker2D" parent="enemy_body/sprite/Sprite2D"]
position = Vector2(4.03953, -0.48964)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
fixed_fps = 30
draw_order = 1
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 281.76
initial_velocity_max = 525.0
angular_velocity_max = 583.78
angle_min = -36.9
angle_max = 221.6
scale_amount_min = 14.51
scale_amount_max = 28.03
scale_amount_curve = SubResource("Curve_pblsb")
color_ramp = SubResource("Gradient_1ovfl")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ng55x")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
